[package]
name = "twilio-test"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
axum-prometheus = "0.7.0"
tokio = { version = "1.42.0", features = ["full"] }
tower = "0.5.1"
tower-http = { version = "0.6.2", features = ["cors", "trace", "tracing"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
